# test1

./: .gitignore  DataPY_v1_Capability_Commitment.docx  db_init.py  in.py  new living doc.txt  py_env_check.py  pyproject.toml  pytest.ini  setup.py  test.py  testingNotes.txt
Old DataPY/: db_init.py
Old DataPY/notes/: testingNotes.txt
Old DataPY/pype/cli/: build.py  cli.py  registry.py  setup.py
Old DataPY/pype/components/: base.py
Old DataPY/pype/schemas/: job.schema.json
PYpeline/: Pypeline_Details_doc.txt  pytest.ini
PYpeline/notes/: Pypeline_Details_doc.txt  livingSpecSheet.txt
PYpeline/pype/: initCreate.py
PYpeline/pype/schema/: flow.schema.json
PYpeline/pypeline/run/: artifact.py
PYpeline/pypeline/schema/: flow.schema.json
notes/: cliNotes.txt  conponentCreationGuide.txt  executer rules.docx  planner rules.docx  precommitHooksSetup.txt  rules.txt  testingNotes.txt
pype/: __init__.py
pype/cli/: build.py  cli.py  component_creator.py  dag_visualizer.py  graph_visualizer.py  inspect_pjob.py  registry.py  visualize_dag.py
pype/components/: __init__.py  base.py
pype/components/control/: forEach.py  logging.py
pype/components/io/: echo.py
pype/components/utility/: test_echo.py
pype/core/engine/: component_invoker.py  execution_manager.py  foreach_executor.py  global_store.py  job_config_handler.py  memory_manager.py  orchestrator.py  pipeline_data.py  regular_executor.py  subjob_tracker.py  templater.py
pype/core/loader/: loader.py  (+2 more)
pype/schemas/: component.schema.json  job.schema.json
test_jobs/: context.json  sample_job.yaml
(+25 files in other folders)
