[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapy"
version = "0.1.0"
description = "CLI-first, YAML-driven ETL framework"
authors = [{name = "DataPY Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "ruamel.yaml",
    "pydantic",
    "click",
    "networkx", 
    "pandas>=2.0.0",     # Updated for better compatibility with PipelineData
    "numpy",
    "dask[complete]>=2023.1.0",  # Updated for complete dask functionality
    "msgpack",
    "requests",
    "typing_extensions",
    "toolz",
    "cloudpickle",
    "partd",
    "fsspec",
    "python-dateutil",
    "tzdata",
    "pytz",
    "jsonschema",
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort", 
    "mypy",
    "pre-commit",
]

[project.scripts]
pype = "pype.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pype*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true